--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>web developer portfolio</title>
+    <link rel="stylesheet" href="styles/portfolio.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
+        rel="stylesheet">
+
 </head>
+
 <body>
-    
+    <header>
+        <nav>
+            <h3 class="nav-title">Met<span class="orange-letter">h</span>ela</h3>
+            <ul>
+                <li><a href="#">portfolio</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><button class="btn-primary">Hire me</button></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
+
 </html>
