--- a/index.html
+++ b/index.html
@@ -14,15 +14,25 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <nav>
-            <h3 class="nav-title">Met<span class="orange-letter">h</span>ela</h3>
+            <h3 class="nav-title">Ma<span class="orange-letter">r</span>y</h3>
             <ul>
                 <li><a href="#">portfolio</a></li>
                 <li><a href="#">Blog</a></li>
                 <li><button class="btn-primary">Hire me</button></li>
             </ul>
         </nav>
+        <div class="banner">
+            <div class="banner_text">
+                <h3 class="banner_greetings">Hi, I  am</h3>
+                <h1 class="banner_title">Mary Hardy</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact</button>
+            </div>
+            <img class="profile_pic" src="images/hardy.png" alt=""> 
+        </div>
     </header>
     <main>
 
