added about information

--- a/index.html
+++ b/index.html
@@ -44,7 +44,35 @@
                 while working with me. Delivering work within time and budget which meets clients requirements in our
                 mata.
             </p>
+            <div class="about_info_container">
+                <!-- .about_info*4>h4.info_title+p.info_description  -->
+                <div class="about_info">
+                    <h4 class="info_title">Name:</h4>
+                    <p class="info_description">Mary Hardy</p>
+                </div>
+                <div class="about_info">
+                    <h4 class="info_title">Email:</h4>
+                    <p class="info_description">info@gmail.com</p>
+                </div>
+                <div class="about_info">
+                    <h4 class="info_title">Date of birth:</h4>
+                    <p class="info_description">11 November 1987</p>
+                </div>
+                <div class="about_info">
+                    <h4 class="info_title">From:</h4>
+                    <p class="info_description">Los Angeles, USA</p>
+                </div>
+            </div>
         </section>
+        <!-- <section class="what_i_do">
+            <h3 class="section_title">What I do</h3>
+            <p class="section_descrip">
+                I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.
+            </p>
+             
+           
+
+        </section> -->
 
     </main>
     <footer>
